--- a/profiling_simulate.ipynb
+++ b/profiling_simulate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "b2b4786d",
    "metadata": {},
    "outputs": [],
@@ -62,31 +62,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "ccabac07",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#%%timeit\n",
-    "solution = pfr.simulate(grid_size=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "c7915f44",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.9 ms ± 198 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "46 ms ± 597 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
     "%%timeit\n",
+    "solution = pfr.simulate(grid_size=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c7915f44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%timeit\n",
     "# reactord solution\n",
     "fogler_concentrations = np.array([])\n",
     "\n",
@@ -108,7 +108,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 ('reactord')",
    "language": "python",
    "name": "python3"
   },
@@ -123,6 +123,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
+   }
   }
  },
  "nbformat": 4,
