--- a/docs/source/tutorial/Substance.ipynb
+++ b/docs/source/tutorial/Substance.ipynb
@@ -392,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('reactord')",
+   "display_name": "reactord",
    "language": "python",
    "name": "python3"
   },
@@ -406,11 +406,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Aug 10 2022, 11:40:04) [GCC 11.3.0]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "3db6692755cc9a0f1f384d2bf82ee8ea60abce7e756c1c394928c990a009cced"
+    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
    }
   }
  },
