fixing markdown tutorial

--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -29,6 +29,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fc73c599",
    "metadata": {},
@@ -68,30 +69,30 @@
     "```\n",
     "The Substance arguments may be classified in two grups:  \n",
     "* Constant properties:  \n",
-    "    * name\n",
-    "    * molecular_weight\n",
-    "    * normal_boiling_point\n",
-    "    * normal_melting_point\n",
-    "    * critical_temperature\n",
-    "    * critical_pressure\n",
-    "    * acentric_factor\n",
-    "    * formation_enthalpy\n",
-    "    * formation_enthalpy_ig\n",
-    "    * formation_gibbs\n",
-    "    * formation_gibbs_ig  \n",
+    "    - name  \n",
+    "    - molecular_weight  \n",
+    "    - normal_boiling_point  \n",
+    "    - normal_melting_point  \n",
+    "    - critical_temperature  \n",
+    "    - critical_pressure  \n",
+    "    - acentric_factor  \n",
+    "    - formation_enthalpy  \n",
+    "    - formation_enthalpy_ig  \n",
+    "    - formation_gibbs  \n",
+    "    - formation_gibbs_ig    \n",
     "* Temperature and pressure dependent properties:  \n",
-    "    * vaporization_enthalpy_t\n",
-    "    * sublimation_enthalpy_t\n",
-    "    * volume_solid_t\n",
-    "    * volume_liquid_tp\n",
-    "    * volume_gas_tp\n",
-    "    * heat_capacity_solid_t\n",
-    "    * heat_capacity_liquid_t\n",
-    "    * heat_capacity_gas_t\n",
-    "    * thermal_conductivity_liquid_tp\n",
-    "    * thermal_conductivity_gas_tp\n",
-    "    * viscosity_liquid_tp\n",
-    "    * viscosity_gas_tp\n",
+    "    - vaporization_enthalpy_t  \n",
+    "    - sublimation_enthalpy_t  \n",
+    "    - volume_solid_t  \n",
+    "    - volume_liquid_tp  \n",
+    "    - volume_gas_tp  \n",
+    "    - heat_capacity_solid_t  \n",
+    "    - heat_capacity_liquid_t  \n",
+    "    - heat_capacity_gas_t  \n",
+    "    - thermal_conductivity_liquid_tp  \n",
+    "    - thermal_conductivity_gas_tp  \n",
+    "    - viscosity_liquid_tp  \n",
+    "    - viscosity_gas_tp  \n",
     "\n",
     "The **Temperature and pressure dependent properties** must be specified as \n",
     "python functions of temperature, or both temperature and pressure, as \n",
