--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "ba50737b",
    "metadata": {},
    "outputs": [],
@@ -34,6 +34,8 @@
    "id": "fc73c599",
    "metadata": {},
    "source": [
+    "### Substance objects instantiation\n",
+    "\n",
     "A fully defined Substance contains a lot of information that may not be \n",
     "available or may not be necessary for the reactive system that will be \n",
     "simulated. The minimum necessary information for each substance will be \n",
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a078e3c1",
    "metadata": {},
    "outputs": [],
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "a57605bc",
    "metadata": {},
    "outputs": [
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "932ce3b3",
    "metadata": {},
    "outputs": [
@@ -263,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "a4ef50d7",
    "metadata": {},
    "outputs": [
@@ -273,7 +275,7 @@
        "Text(0.5, 0, 'Temperature [K]')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -318,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "d47c79e7",
    "metadata": {},
    "outputs": [
@@ -416,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Aug 10 2022, 11:40:04) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
