all destroyed keep working tomorrow

--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -116,17 +116,18 @@
    "source": [
     "# Defining functions for molar liquid volume and liquid heat capacity.\n",
     "\n",
+    "\n",
     "def water_volume_liquid_tp(temperature: float, pressure: float) -> float:\n",
     "    \"\"\"User defined function for liquid molar volume. [m^3/mol]\n",
-    "    \n",
+    "\n",
     "    Even if pressure is not used in the molar volume function it must be\n",
     "    specified as an argument.\n",
     "\n",
-    "    The termination of the Substance argument is a visual help to remember the \n",
+    "    The termination of the Substance argument is a visual help to remember the\n",
     "    arguments needed.\n",
-    "    \n",
+    "\n",
     "    xxx_t: function(temperature)\n",
-    "    \n",
+    "\n",
     "    xxx_tp: function(temperature, pressure)\n",
     "\n",
     "    Parameters\n",
@@ -148,7 +149,12 @@
     "\n",
     "    molar_vol = (\n",
     "        1\n",
-    "        / (c1 + c2 * temperature + c3 * temperature**2 + c4 * temperature**3)\n",
+    "        / (\n",
+    "            c1\n",
+    "            + c2 * temperature\n",
+    "            + c3 * temperature**2\n",
+    "            + c4 * temperature**3\n",
+    "        )\n",
     "        / 1000\n",
     "    )\n",
     "\n",
@@ -175,10 +181,10 @@
     "    c5 = 9.3701e-06\n",
     "\n",
     "    cp_liquid = (\n",
-    "        c1 \n",
-    "        + c2 * temperature \n",
-    "        + c3 * temperature**2 \n",
-    "        + c4 * temperature**3 \n",
+    "        c1\n",
+    "        + c2 * temperature\n",
+    "        + c3 * temperature**2\n",
+    "        + c4 * temperature**3\n",
     "        + c5 * temperature**4\n",
     "    )\n",
     "    return cp_liquid / 1000"
@@ -204,10 +210,10 @@
     "# Defining water Substance by hand\n",
     "\n",
     "water_byhand = rd.Substance(\n",
-    "    name='water',\n",
+    "    name=\"water\",\n",
     "    molecular_weight=18.015,\n",
     "    volume_liquid_tp=water_volume_liquid_tp,\n",
-    "    heat_capacity_liquid_t=water_heat_capacity_liquid_t\n",
+    "    heat_capacity_liquid_t=water_heat_capacity_liquid_t,\n",
     ")\n",
     "\n",
     "# Calling substance methods\n",
@@ -256,7 +262,7 @@
     }
    ],
    "source": [
-    "water_thermo = rd.Substance.from_thermo_database('water')\n",
+    "water_thermo = rd.Substance.from_thermo_database(\"water\")\n",
     "\n",
     "print(water_thermo.molecular_weight)\n",
     "print(water_thermo.volume_liquid(298.15, 101325))\n",
@@ -291,10 +297,10 @@
     "plt.plot(temperature, water_vol_byhand)\n",
     "plt.plot(temperature, water_vol_thermo)\n",
     "\n",
-    "plt.title('Water liquid molar volume ')\n",
-    "plt.legend(['water_byhand', 'water_thermo'])\n",
-    "plt.ylabel(r'Molar volume [$m^{3}$/mol]')\n",
-    "plt.xlabel('Temperature [K]');"
+    "plt.title(\"Water liquid molar volume \")\n",
+    "plt.legend([\"water_byhand\", \"water_thermo\"])\n",
+    "plt.ylabel(r\"Molar volume [$m^{3}$/mol]\")\n",
+    "plt.xlabel(\"Temperature [K]\");"
    ]
   },
   {
@@ -349,44 +355,44 @@
    ],
    "source": [
     "print(\n",
-    "    f'name: {water_thermo.name} \\n'\n",
-    "    f'molecular weight: {water_thermo.molecular_weight} g/mol \\n'\n",
-    "    f'normal boiling point: {water_thermo.normal_boiling_point} K \\n'\n",
-    "    f'normal melting point: {water_thermo.normal_melting_point} K \\n'\n",
-    "    f'critical temperature: {water_thermo.critical_temperature} K \\n'\n",
-    "    f'critical pressure: {water_thermo.critical_pressure} Pa \\n'\n",
-    "    f'acentric factor: {water_thermo.acentric_factor} \\n'\n",
-    "    f'formation enthalpy: {water_thermo.formation_enthalpy} J/mol \\n'\n",
-    "    f'formation enthalpy ideal gas: {water_thermo.formation_enthalpy_ig} J/mol'\n",
-    "    '\\n'\n",
-    "    f'formation Gibbs energy: {water_thermo.formation_gibbs} J/mol \\n'\n",
-    "    f'formation Gibbs energy ideal gas: {water_thermo.formation_enthalpy_ig}'\n",
-    "    ' J/mol \\n'\n",
-    "    f'vaporization enthalpy: {water_thermo.vaporization_enthalpy(373.15)}'\n",
-    "    ' J/mol \\n'\n",
-    "    f'sublimation enthalpy: {water_thermo.sublimation_enthalpy(273.15)} J/mol'\n",
-    "    '\\n'\n",
-    "    f'fusion enthalpy: {water_thermo.fusion_enthalpy(298.15)} J/mol \\n'\n",
-    "    f'volume solid: {water_thermo.volume_solid(273.15)} m^3/mol \\n'\n",
-    "    f'volume liquid: {water_thermo.volume_liquid(298.15, 101325)} m^3/mol \\n'\n",
-    "    f'volume gas: {water_thermo.volume_gas(373.15, 101325)} m^3/mol \\n'\n",
-    "    f'heat capacity solid: {water_thermo.heat_capacity_solid(373.15)} J/K/mol'\n",
-    "    '\\n'\n",
-    "    f'heat capacity liquid: {water_thermo.heat_capacity_liquid(373.15)}' \n",
-    "    ' J/K/mol \\n'\n",
-    "    f'heat capacity gas: {water_thermo.heat_capacity_gas(373.15)} J/K/mol \\n'\n",
-    "    f'thermal conductivity liquid: {water_thermo.thermal_conductivity_liquid(298.15, 101325)}'\n",
-    "    ' W/m/K \\n'\n",
-    "    f'thermal conductivity gas: {water_thermo.thermal_conductivity_gas(373.15, 101325)}'\n",
-    "    ' W/m/K \\n'\n",
-    "    f'viscosity liquid: {water_thermo.viscosity_liquid(298.15, 101325)} Pa/s' \n",
-    "    '\\n'\n",
-    "    f'viscosity gas: {water_thermo.viscosity_gas(400, 101325)} Pa/s' \n",
-    "    ' SOME METHODS MAY NOT BE DEFINED IN THERMO! \\n'\n",
-    "    'heat capacity integrals: \\n'\n",
-    "    f'solid: {water_thermo.heat_capacity_solid_dt_integral(250, 280)} J/mol'\n",
-    "    f' liquid: {water_thermo.heat_capacity_liquid_dt_integral(300, 330)} J/mol'\n",
-    "    f' gas: {water_thermo.heat_capacity_gas_dt_integral(380, 410)} J/mol'\n",
+    "    f\"name: {water_thermo.name} \\n\"\n",
+    "    f\"molecular weight: {water_thermo.molecular_weight} g/mol \\n\"\n",
+    "    f\"normal boiling point: {water_thermo.normal_boiling_point} K \\n\"\n",
+    "    f\"normal melting point: {water_thermo.normal_melting_point} K \\n\"\n",
+    "    f\"critical temperature: {water_thermo.critical_temperature} K \\n\"\n",
+    "    f\"critical pressure: {water_thermo.critical_pressure} Pa \\n\"\n",
+    "    f\"acentric factor: {water_thermo.acentric_factor} \\n\"\n",
+    "    f\"formation enthalpy: {water_thermo.formation_enthalpy} J/mol \\n\"\n",
+    "    f\"formation enthalpy ideal gas: {water_thermo.formation_enthalpy_ig} J/mol\"\n",
+    "    \"\\n\"\n",
+    "    f\"formation Gibbs energy: {water_thermo.formation_gibbs} J/mol \\n\"\n",
+    "    f\"formation Gibbs energy ideal gas: {water_thermo.formation_enthalpy_ig}\"\n",
+    "    \" J/mol \\n\"\n",
+    "    f\"vaporization enthalpy: {water_thermo.vaporization_enthalpy(373.15)}\"\n",
+    "    \" J/mol \\n\"\n",
+    "    f\"sublimation enthalpy: {water_thermo.sublimation_enthalpy(273.15)} J/mol\"\n",
+    "    \"\\n\"\n",
+    "    f\"fusion enthalpy: {water_thermo.fusion_enthalpy(298.15)} J/mol \\n\"\n",
+    "    f\"volume solid: {water_thermo.volume_solid(273.15)} m^3/mol \\n\"\n",
+    "    f\"volume liquid: {water_thermo.volume_liquid(298.15, 101325)} m^3/mol \\n\"\n",
+    "    f\"volume gas: {water_thermo.volume_gas(373.15, 101325)} m^3/mol \\n\"\n",
+    "    f\"heat capacity solid: {water_thermo.heat_capacity_solid(373.15)} J/K/mol\"\n",
+    "    \"\\n\"\n",
+    "    f\"heat capacity liquid: {water_thermo.heat_capacity_liquid(373.15)}\"\n",
+    "    \" J/K/mol \\n\"\n",
+    "    f\"heat capacity gas: {water_thermo.heat_capacity_gas(373.15)} J/K/mol \\n\"\n",
+    "    f\"thermal conductivity liquid: {water_thermo.thermal_conductivity_liquid(298.15, 101325)}\"\n",
+    "    \" W/m/K \\n\"\n",
+    "    f\"thermal conductivity gas: {water_thermo.thermal_conductivity_gas(373.15, 101325)}\"\n",
+    "    \" W/m/K \\n\"\n",
+    "    f\"viscosity liquid: {water_thermo.viscosity_liquid(298.15, 101325)} Pa/s\"\n",
+    "    \"\\n\"\n",
+    "    f\"viscosity gas: {water_thermo.viscosity_gas(400, 101325)} Pa/s\"\n",
+    "    \" SOME METHODS MAY NOT BE DEFINED IN THERMO! \\n\"\n",
+    "    \"heat capacity integrals: \\n\"\n",
+    "    f\"solid: {water_thermo.heat_capacity_solid_dt_integral(250, 280)} J/mol\"\n",
+    "    f\" liquid: {water_thermo.heat_capacity_liquid_dt_integral(300, 330)} J/mol\"\n",
+    "    f\" gas: {water_thermo.heat_capacity_gas_dt_integral(380, 410)} J/mol\"\n",
     ")"
    ]
   }
