--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "ba50737b",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a078e3c1",
    "metadata": {},
    "outputs": [],
@@ -192,17 +192,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "a57605bc",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18.015\n",
-      "1.7999364032438635e-05\n",
-      "75.38420366723898\n"
+     "ename": "TypeError",
+     "evalue": "Substance.__init__() got an unexpected keyword argument 'volume_liquid_tp'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Defining water Substance by hand\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m water_byhand \u001b[39m=\u001b[39m rd\u001b[39m.\u001b[39;49mSubstance(\n\u001b[1;32m      4\u001b[0m     name\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mwater\u001b[39;49m\u001b[39m\"\u001b[39;49m,\n\u001b[1;32m      5\u001b[0m     molecular_weight\u001b[39m=\u001b[39;49m\u001b[39m18.015\u001b[39;49m,\n\u001b[1;32m      6\u001b[0m     volume_liquid_tp\u001b[39m=\u001b[39;49mwater_volume_liquid_tp,\n\u001b[1;32m      7\u001b[0m     heat_capacity_liquid_t\u001b[39m=\u001b[39;49mwater_heat_capacity_liquid_t,\n\u001b[1;32m      8\u001b[0m )\n\u001b[1;32m     10\u001b[0m \u001b[39m# Calling substance methods\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[39mprint\u001b[39m(water_byhand\u001b[39m.\u001b[39mmolecular_weight)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Substance.__init__() got an unexpected keyword argument 'volume_liquid_tp'"
      ]
     }
    ],
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "932ce3b3",
    "metadata": {},
    "outputs": [
@@ -271,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a4ef50d7",
    "metadata": {},
    "outputs": [
@@ -316,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d47c79e7",
    "metadata": {},
    "outputs": [
