--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -181,7 +181,7 @@
     "        + c4 * temperature**3\n",
     "        + c5 * temperature**4\n",
     "    )\n",
-    "    return cp_liquid / 1000"
+    "    return cp_liquid / 1000\n"
    ]
   },
   {
@@ -418,11 +418,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
+    "hash": "0da960acde017608603fcb155815528bc626e42a5841520214e4e02be5770591"
    }
   }
  },
