--- a/presentation/presentacion.ipynb
+++ b/presentation/presentacion.ipynb
@@ -161,9 +161,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Por otro lado, de acuerdo a los requerimientos la operación de los reactores puede variar según:  \n",
     "\n",
@@ -182,9 +185,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Operacion Continua Homogenea Isotermica Isobarica\n",
     "\n",
@@ -197,6 +203,48 @@
     "#### Operacion Continua Homogenea Isotermica No Isobarica\n",
     "\n",
     "$$ \\frac{dP}{dz} = - \\frac{G}{{\\rho}{g}{D_{p}}}(\\frac{1-\\phi}{\\phi^3})[\\frac{{150}({1-\\phi})\\mu}{D_{p}}+1.75{G}] $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Arquitectura e implementación\n",
+    "\n",
+    "<img \n",
+    "    style=\"display: block; \n",
+    "           margin-left: auto;\n",
+    "           margin-right: auto;\n",
+    "           width: 30%;\"\n",
+    "    src=\"arquitectura.PNG\" \n",
+    "    alt=\"arquitectura\">\n",
+    "</img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Integración Continua"
    ]
   }
  ],
@@ -217,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
