--- a/docs/source/tutorial/presentation/presentation.ipynb
+++ b/docs/source/tutorial/presentation/presentation.ipynb
@@ -185,6 +185,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -198,7 +199,7 @@
     "\n",
     "#### Operacion Continua Homogenea Adiabatica Isobarica\n",
     "\n",
-    "$$ \\frac{dT}{dV} = \\frac{Ua(T_{a}-T)+\\sum r_{ji}\\\\\\Delta H_{Ri} }{\\sum F_{j} {C_p}_j } $$\n",
+    "$$ \\frac{dT}{dV} = \\frac{\\sum r_{ji}\\\\\\Delta H_{Ri} }{\\sum F_{j} {C_p}_j } $$\n",
     "\n",
     "#### Operacion Continua Homogenea Isotermica No Isobarica\n",
     "\n",
@@ -226,6 +227,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -233,10 +235,18 @@
     }
    },
    "source": [
-    "### Testing"
+    "### Testing\n",
+    "\n",
+    "- Cantidad de test actualmente: 107\n",
+    "\n",
+    "- Coverage alcanzado: 95%\n",
+    "\n",
+    "- Principal estrategia: comparacion con ejemplos resueltos del libro \n",
+    "\"Elementos de ingenería de las reacciones químicas\", Fogler 2008. para cada tipo de operacion y para diferentes condiciones iniciales y de borde.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -244,7 +254,11 @@
     }
    },
    "source": [
-    "### Integración Continua"
+    "### Integración Continua\n",
+    "\n",
+    "- Repositorio disponible: https://github.com/SalvadorBrandolin/reactord\n",
+    "- Se aplican los tests mediante GitHub Actions en cada push. \n",
+    "- Licencia: MIT"
    ]
   }
  ],
