--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -181,7 +181,7 @@
     "        + c4 * temperature**3\n",
     "        + c5 * temperature**4\n",
     "    )\n",
-    "    return cp_liquid / 1000\n"
+    "    return cp_liquid / 1000"
    ]
   },
   {
