--- a/docs/source/tutorial/presentation/presentation.ipynb
+++ b/docs/source/tutorial/presentation/presentation.ipynb
@@ -65,6 +65,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -86,9 +87,9 @@
     "    style=\"display: block; \n",
     "           margin-left: auto;\n",
     "           margin-right: auto;\n",
-    "           width: 300;\n",
-    "           height: 200\"\n",
-    "    src=\"python_fogler.jpeg\" \n",
+    "           width: 200;\n",
+    "           height: 300\"\n",
+    "    src=\"python_fogler.png\" \n",
     "    alt=\"Python-Fogler\">\n",
     "</img>\n"
    ]
@@ -141,6 +142,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -155,7 +157,7 @@
     "           margin-left: auto;\n",
     "           margin-right: auto;\n",
     "           width: 30%;\"\n",
-    "    src=\"PFR.jpg\" \n",
+    "    src=\"PFR.png\" \n",
     "    alt=\"PFR\">\n",
     "</img>"
    ]
@@ -229,6 +231,26 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un reactor puede ser operado en variedad de condiciones lo que afecta el modelo matemático que lo describe. Además, ReactorD  permite encontrar soluciones para problemas de valor inicial y/o borde segun los datos iniciales que provea el usuario. \n",
+    "Esto produce un problema con alto grado de acoplamiento. Por lo cual, se utilizó el patron \"Strategy\"  \n",
+    "\n",
+    "Librerias utilizadas: \n",
+    "- SciPy: ecuaciones algebraicas y diferenciales ordinarias\n",
+    "- py-pde: ecuaciones diferenciales parciales. \n",
+    "- Thermo: constantes y correlaciones para propiedades de una amplia base de datos de sustancias. \n",
+    "\n",
+    "Input necesarios: \n",
+    "- Reactantes, productos e inertes que participan de cada reaccion. \n",
+    "- Cinetica de cada reaccion. (Constantes y orden)\n",
+    "\n",
+    "El usuario tambien tiene la posibilidad de generar la sustancia con los datos y correlaciones correspondientes con la posibilidad de guardar estos objetos como archivos utilizando la herramienta pickle"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -237,7 +259,7 @@
    "source": [
     "### Testing\n",
     "\n",
-    "- Cantidad de test actualmente: 107\n",
+    "- Cantidad de test actualmente: 121\n",
     "\n",
     "- Coverage alcanzado: 95%\n",
     "\n",
@@ -259,6 +281,27 @@
     "- Repositorio disponible: https://github.com/SalvadorBrandolin/reactord\n",
     "- Se aplican los tests mediante GitHub Actions en cada push. \n",
     "- Licencia: MIT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tutorial de Uso"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perspectivas a Futuro\n",
+    "\n",
+    "- Ampliar el tipo de operaciones para PFR\n",
+    "- Agregar reactor tipo mezcla perfecta\n",
+    "- Ampliar resolucion de reactores heterogeneos"
    ]
   }
  ],
