--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ba50737b",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a078e3c1",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a57605bc",
    "metadata": {},
    "outputs": [
@@ -215,6 +215,30 @@
     "print(water_byhand.molecular_weight)\n",
     "print(water_byhand.volume_liquid(298.15, 101325))\n",
     "print(water_byhand.heat_capacity_liquid(298.15))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5566a0e3",
+   "metadata": {},
+   "source": [
+    "For convinence the object subject create by hand could be save into a file for its posterior use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "32406b73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#The object is save\n",
+    "Water = rd.Substance.create_substance_file(water_byhand, \"water_file\")\n",
+    "\n",
+    "# The substance object is called\n",
+    "\n",
+    "Water = rd.Substance.load_file(\"water_file\")\n"
    ]
   },
   {
@@ -418,11 +442,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "0da960acde017608603fcb155815528bc626e42a5841520214e4e02be5770591"
+    "hash": "32c67f4c963949a7fe70ff718e2227e313500f4b2abdd00c87839288217969e2"
    }
   }
  },
