--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ba50737b",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a078e3c1",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a57605bc",
    "metadata": {},
    "outputs": [
@@ -228,17 +228,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "32406b73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7999364032438635e-05\n"
+     ]
+    }
+   ],
    "source": [
     "#The object is save\n",
-    "Water = rd.Substance.create_substance_file(water_byhand, \"water_file\")\n",
+    "water_byhand.to_pickle(\"water_file\")\n",
     "\n",
     "# The substance object is called\n",
+    "water_from_pickle = rd.Substance.from_pickle(\"water_file\")\n",
     "\n",
-    "Water = rd.Substance.load_file(\"water_file\")\n"
+    "print(water_from_pickle.volume_liquid(298.15, 101325))\n"
    ]
   },
   {
@@ -265,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "932ce3b3",
    "metadata": {},
    "outputs": [
@@ -280,7 +289,7 @@
     }
    ],
    "source": [
-    "water_thermo = rd.Substance.from_thermo_database(\"water\")\n",
+    "water_thermo = rd.Substance.from_thermo_database(\"substance1\", \"water\")\n",
     "\n",
     "print(water_thermo.molecular_weight)\n",
     "print(water_thermo.volume_liquid(298.15, 101325))\n",
@@ -289,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a4ef50d7",
    "metadata": {},
    "outputs": [
@@ -335,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d47c79e7",
    "metadata": {},
    "outputs": [
@@ -435,7 +444,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "32c67f4c963949a7fe70ff718e2227e313500f4b2abdd00c87839288217969e2"
+    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
    }
   }
  },
