--- a/docs/source/tutorial/ideal_gas.ipynb
+++ b/docs/source/tutorial/ideal_gas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,9 +125,18 @@
      "text": [
       "Molar volume of the mixture:  0.0 m³/mol\n",
       "Heat capacity:  38.4  J/K\n",
-      "Formation enthalpies:  [-296800.       0. -395700. -393474.]  J/(mol.K)\n",
-      "Enthalpy correction:  [4273.3 3025.5 5561.8 4004.7]  J/(mol.K)\n",
-      "Corrected enthalpies:  [-292526.7    3025.5 -390138.2 -389469.3]  J/(mol.K)\n"
+      "Formation enthalpies:  [-296800.       0. -395700. -393474.]  J/(mol.K)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "IdealGas.formation_enthalpies_correction() missing 1 required positional argument: 'pressure'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 19\u001b[0m\n\u001b[1;32m     16\u001b[0m standard_enthalpies \u001b[39m=\u001b[39m gas_mixture\u001b[39m.\u001b[39m_formation_enthalpies_set()\n\u001b[1;32m     17\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mFormation enthalpies: \u001b[39m\u001b[39m\"\u001b[39m, standard_enthalpies, \u001b[39m\"\u001b[39m\u001b[39m J/(mol.K)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 19\u001b[0m enthalpy_correction \u001b[39m=\u001b[39m gas_mixture\u001b[39m.\u001b[39;49mformation_enthalpies_correction(\u001b[39m400\u001b[39;49m)\n\u001b[1;32m     20\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnthalpy correction: \u001b[39m\u001b[39m\"\u001b[39m, np\u001b[39m.\u001b[39mround(enthalpy_correction, \u001b[39m1\u001b[39m), \u001b[39m\"\u001b[39m\u001b[39m J/(mol.K)\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     21\u001b[0m \u001b[39mprint\u001b[39m(\n\u001b[1;32m     22\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mCorrected enthalpies: \u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     23\u001b[0m     np\u001b[39m.\u001b[39mround(standard_enthalpies \u001b[39m+\u001b[39m enthalpy_correction, \u001b[39m1\u001b[39m),\n\u001b[1;32m     24\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39m J/(mol.K)\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     25\u001b[0m )\n",
+      "\u001b[0;31mTypeError\u001b[0m: IdealGas.formation_enthalpies_correction() missing 1 required positional argument: 'pressure'"
      ]
     }
    ],
@@ -143,14 +152,14 @@
     ")\n",
     "print(\n",
     "    \"Heat capacity: \",\n",
-    "    np.round(gas_mixture.mix_heat_capacity(moles, temperature), 1),\n",
+    "    np.round(gas_mixture.mix_heat_capacity(moles, temperature, 101325), 1),\n",
     "    \" J/K\",\n",
     ")\n",
     "\n",
     "standard_enthalpies = gas_mixture._formation_enthalpies_set()\n",
     "print(\"Formation enthalpies: \", standard_enthalpies, \" J/(mol.K)\")\n",
     "\n",
-    "enthalpy_correction = gas_mixture.formation_enthalpies_correction(400)\n",
+    "enthalpy_correction = gas_mixture.formation_enthalpies_correction(400, 101325)\n",
     "print(\"Enthalpy correction: \", np.round(enthalpy_correction, 1), \" J/(mol.K)\")\n",
     "print(\n",
     "    \"Corrected enthalpies: \",\n",
@@ -169,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,12 +215,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "32c67f4c963949a7fe70ff718e2227e313500f4b2abdd00c87839288217969e2"
+    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
    }
   }
  },
