--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "ba50737b",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "a078e3c1",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "a57605bc",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "32406b73",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "932ce3b3",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "a4ef50d7",
    "metadata": {},
    "outputs": [
@@ -308,7 +308,7 @@
        "Text(0.5, 0, 'Temperature [K]')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "d47c79e7",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,8 @@
       "thermal conductivity liquid: 0.606299909107096 W/m/K \n",
       "thermal conductivity gas: 0.023865413505450152 W/m/K \n",
       "viscosity liquid: 0.0009125307951858123 Pa/s\n",
-      "viscosity gas: 1.3587844730035658e-05 Pa/sHeat capacity integral over temperature: \n",
+      "viscosity gas: 1.3587844730035658e-05 Pa/s \n",
+      "Heat capacity integral over temperature: \n",
       "solid: 681.6705747748953 J/mol liq: 2258.000649097829 J/mol gas: 1026.395658287748 J/mol\n"
      ]
     }
