--- a/docs/source/tutorial/ideal_gas.ipynb
+++ b/docs/source/tutorial/ideal_gas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,8 @@
     "-  Calculate the molar volume (mol/m³)\n",
     "-  Calculate the heat capacity (J/K)\n",
     "-  Establish the standard formation enthalpies of the substances in the mixture (J/(mol.K)\n",
-    "-  Calculate a term to correct the formation enthalpies at non-standard conditions (J/(mol.K)"
+    "-  Calculate a term to correct the formation enthalpies at non-standard conditions (J/(mol.K)\n",
+    "-  Calculate a mixture viscosity (Pa.s)"
    ]
   },
   {
@@ -127,7 +128,8 @@
       "Heat capacity:  38.4  J/K\n",
       "Formation enthalpies:  [-296800.       0. -395700. -393474.]  J/(mol.K)\n",
       "Enthalpy correction:  [4273.3 3025.5 5561.8 4004.7]  J/(mol.K)\n",
-      "Corrected enthalpies:  [-292526.7    3025.5 -390138.2 -389469.3]  J/(mol.K)\n"
+      "Corrected enthalpies:  [-292526.7    3025.5 -390138.2 -389469.3]  J/(mol.K)\n",
+      "Mixture viscosity:  1.46e-05  Pa.s\n"
      ]
     }
    ],
@@ -143,20 +145,25 @@
     ")\n",
     "print(\n",
     "    \"Heat capacity: \",\n",
-    "    np.round(gas_mixture.mix_heat_capacity(moles, temperature), 1),\n",
+    "    np.round(gas_mixture.mix_heat_capacity(moles, temperature, pressure), 1),\n",
     "    \" J/K\",\n",
     ")\n",
     "\n",
     "standard_enthalpies = gas_mixture._formation_enthalpies_set()\n",
     "print(\"Formation enthalpies: \", standard_enthalpies, \" J/(mol.K)\")\n",
     "\n",
-    "enthalpy_correction = gas_mixture.formation_enthalpies_correction(400)\n",
+    "enthalpy_correction = gas_mixture.formation_enthalpies_correction(\n",
+    "    400, pressure\n",
+    ")\n",
     "print(\"Enthalpy correction: \", np.round(enthalpy_correction, 1), \" J/(mol.K)\")\n",
     "print(\n",
     "    \"Corrected enthalpies: \",\n",
     "    np.round(standard_enthalpies + enthalpy_correction, 1),\n",
     "    \" J/(mol.K)\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "mixture_viscosity = gas_mixture.mixture_viscosity(moles, temperature, pressure)\n",
+    "print(\"Mixture viscosity: \", np.round(mixture_viscosity, 7), \" Pa.s\")"
    ]
   },
   {
@@ -206,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
