--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -233,12 +233,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#The object is save\n",
+    "# The object is save\n",
     "Water = rd.Substance.create_substance_file(water_byhand, \"water_file\")\n",
     "\n",
     "# The substance object is called\n",
     "\n",
-    "Water = rd.Substance.load_file(\"water_file\")\n"
+    "Water = rd.Substance.load_file(\"water_file\")"
    ]
   },
   {
