--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -241,13 +241,13 @@
     }
    ],
    "source": [
-    "#The object is save\n",
+    "# The object is save\n",
     "water_byhand.to_pickle(\"water_file\")\n",
     "\n",
     "# The substance object is called\n",
     "water_from_pickle = rd.Substance.from_pickle(\"water_file\")\n",
     "\n",
-    "print(water_from_pickle.volume_liquid(298.15, 101325))\n"
+    "print(water_from_pickle.volume_liquid(298.15, 101325))"
    ]
   },
   {
