cambios menores en la documentacion y tutoriales

--- a/docs/source/tutorial/ideal_gas.ipynb
+++ b/docs/source/tutorial/ideal_gas.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -112,12 +112,12 @@
     "-  Calculate the heat capacity (J/K)\n",
     "-  Establish the standard formation enthalpies of the substances in the mixture (J/(mol.K)\n",
     "-  Calculate a term to correct the formation enthalpies at non-standard conditions (J/(mol.K)\n",
-    "-  Calculate a mixture viscosity (Pa.s)"
+    "-  Calculate the viscosity (Pa.s) of the mixture"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -190,9 +190,11 @@
    "source": [
     "moles = [8, 20, 15, 12]\n",
     "temperature = 700  # K\n",
-    "pressure = 500000  # Pa\n",
+    "total_pressure = 500000  # Pa\n",
     "\n",
-    "partial_pressures = gas_mixture.partial_pressures(moles, temperature, pressure)\n",
+    "partial_pressures = gas_mixture.partial_pressures(\n",
+    "    moles, temperature, total_pressure\n",
+    ")\n",
     "print(np.round(partial_pressures, 0), \"Pa\")"
    ]
   }
@@ -218,7 +220,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
+    "hash": "0da960acde017608603fcb155815528bc626e42a5841520214e4e02be5770591"
    }
   }
  },
