--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f71428b",
    "metadata": {},
@@ -8,7 +9,7 @@
     "## Substance objects\n",
     "\n",
     "Substance objects are the heart of ReactorD library. Each reagent, product and \n",
-    "inert of the reactive systems must be individually represented by a Substance \n",
+    "inert of the reactive system must be individually represented by a Substance \n",
     "object.\n",
     "\n",
     "For this tutorial, import ReactorD, numpy and matplotlib.pyplot"
@@ -16,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "ba50737b",
    "metadata": {},
    "outputs": [],
@@ -38,7 +39,7 @@
     "\n",
     "A fully defined Substance contains a lot of information that may not be \n",
     "available or may not be necessary for the reactive system that will be \n",
-    "simulated. The minimum necessary information for each substance will be \n",
+    "simulated. The minimum necessary information for each substance is \n",
     "specified on each mixture and each reactor. The complete signature for the \n",
     "Substance objects is:\n",
     "\n",
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "a078e3c1",
    "metadata": {},
    "outputs": [],
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "a57605bc",
    "metadata": {},
    "outputs": [
@@ -201,7 +202,7 @@
     }
    ],
    "source": [
-    "# Defining water Substance by hand\n",
+    "# Defining water Substance by hand, which includes the functions previously defined\n",
     "\n",
     "water_byhand = rd.Substance(\n",
     "    name=\"water\",\n",
@@ -223,41 +224,32 @@
    "id": "5566a0e3",
    "metadata": {},
    "source": [
-    "For convinence the object subject create by hand could be save into a file for its posterior use"
+    "For convinence the object substance created by hand can be saved into a file for its posterior use:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "32406b73",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.7999364032438635e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# The object is save\n",
-    "Water = rd.Substance.create_substance_file(water_byhand, \"water_file\")\n",
+    "# The object is saved\n",
+    "Water = rd.Substance.to_pickle(water_byhand, \"water_file\")\n",
     "\n",
     "# The substance object is called\n",
-    "water_from_pickle = rd.Substance.from_pickle(\"water_file\")\n",
-    "\n",
-    "Water = rd.Substance.load_file(\"water_file\")"
+    "water_from_pickle = rd.Substance.from_pickle(\"water_file\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fdcd6148",
    "metadata": {},
    "source": [
     "### Alternative Substance constructor\n",
     "\n",
-    "For convenience an alternative Substance constructor is provided:\n",
+    "For convenience, an alternative Substance constructor is provided:\n",
     "\n",
     "```python\n",
     "substance_object = rd.Substance.from_thermo_database(identification)\n",
@@ -274,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "932ce3b3",
    "metadata": {},
    "outputs": [
@@ -298,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "a4ef50d7",
    "metadata": {},
    "outputs": [
@@ -308,7 +300,7 @@
        "Text(0.5, 0, 'Temperature [K]')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -346,15 +338,15 @@
    "id": "b535563e",
    "metadata": {},
    "source": [
-    "Finally a list of all the attributes and methods that Substance objects may \n",
-    "have.\n",
+    "Finally, a list of all the attributes and methods that Substance objects may \n",
+    "have is shown below.\n",
     "\n",
-    "NOTE THAT FOR SOME SUBSTANCE SOME DATA MAY NOT BE AVAILABLE"
+    "**IMPORTANT:** some data may be not available for a given substance!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "d47c79e7",
    "metadata": {},
    "outputs": [
@@ -457,7 +449,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "32c67f4c963949a7fe70ff718e2227e313500f4b2abdd00c87839288217969e2"
+    "hash": "0da960acde017608603fcb155815528bc626e42a5841520214e4e02be5770591"
    }
   }
  },
