--- a/docs/source/tutorial/Mixtures/ideal_gas.ipynb
+++ b/docs/source/tutorial/Mixtures/ideal_gas.ipynb
@@ -112,7 +112,14 @@
     "-  Calculate the heat capacity (J/K)\n",
     "-  Establish the standard formation enthalpies of the substances in the mixture (J/(mol.K)\n",
     "-  Calculate a term to correct the formation enthalpies at non-standard conditions (J/(mol.K)\n",
-    "-  Calculate the viscosity (Pa.s) of the mixture"
+    "-  Calculate the viscosity (Pa.s) of the mixture\n",
+    "\n",
+    "```Latex\n",
+    "    \\begin{center}\n",
+    "        Holis\n",
+    "    \\end\n",
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -215,12 +222,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0da960acde017608603fcb155815528bc626e42a5841520214e4e02be5770591"
+    "hash": "44eb91f73ea2661bbbecc9f77111c56822635f905b8a2c5d2c14405903be0d49"
    }
   }
  },
