keep working on abastrac mix tutorial

--- a/docs/source/tutorial/Mixtures/abstract_mix.ipynb
+++ b/docs/source/tutorial/Mixtures/abstract_mix.ipynb
@@ -1,29 +1,20 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Abstract mix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "import reactord as rd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mixture objects\n",
-    "\n",
-    "To generate a mixture, first it is necessary to create the Substance objects that will be in the mixture. For instance:"
+    "print(\"hello\")"
    ]
   }
  ],
